--- a/ModTemplate/default-config.json
+++ b/ModTemplate/default-config.json
@@ -1,3 +1,10 @@
 {
   "enabled": true
+  "Remove UI": {
+		"type": "toggle",
+		"value": true,
+		"yes": "Sure thing!",
+		"no": "Nope!",
+		"title": "Disable UI"
+  }
 }
